# pylibseq

./: .gitmodules  CMakeLists.txt  README.md  README.rst  pyproject.toml
.github/workflows/: build_wheels.yaml  release.yaml
pylibseq/: CMakeLists.txt  __init__.py  __main__.py  msprime.py  msstats_cli.py
pylibseq/src/: omega_max.cc
tests/: test_AlleleCountMatrix.py  test_StateCounter.py  test_VariantMatrix.py  test_fst.py  test_polytable.py  test_summstats.py  test_windows.py
