[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibseq"
version="0.3.0"
description = "Python interface to libsequence."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Kevin Thornton", email = "krthornt@uci.edu" },
]
maintainers = [
  { name = "Leon Zong", email = "lzong@haverford.edu" },
]
requires-python = ">=3.9"

dependencies = [
  "typing_extensions",
]

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/organization/package"
Documentation = "https://package.readthedocs.io/"
"Bug Tracker" = "https://github.com/organization/package/issues"
Discussions = "https://github.com/organization/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"

[tool.scikit-build]
cmake.args = ["-DCMAKE_CXX_FLAGS=-std=c++11"]
